--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* style start */
+/* ------------------------------------------ */
 .App {
   text-align: center;
 }
@@ -36,3 +38,5 @@
     transform: rotate(360deg);
   }
 }
+
+/* style end */
